--- a/app/templates/model.html
+++ b/app/templates/model.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Titanic Survived</title>
+    <title>Recomendaciones de Spotify</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
